ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /golang(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: golang-web-svc
            port: 
              number: 8080
      - path: /nodejs(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nodejs-web-svc
            port: 
              number: 8080
